--- a/配置win2012域服务器.md
+++ b/配置win2012域服务器.md
@@ -150,6 +150,52 @@
 
 ![image-20220930151310959](配置win2012域服务器/image-20220930151310959.png)
 
+
+
+# 可能遇到的问题
+
+## 1.net命令提示6118系统错误
+
+### 问题详情
+
+执行`net view`命令出现报错：发生系统错误6118，此工作组的服务器列表当前无法使用
+
+![image-20230815171720964](配置win2012域服务器/image-20230815171720964.png)
+
+
+
+### 解决方法
+
+找到`程序与功能->启用或关闭Windows功能`, 勾选上`SMB 1.0/CIFS 文件共享支持`
+
+![image-20230815172016446](配置win2012域服务器/image-20230815172016446.png)
+
+
+
+随后即可正常使用`net`命令来查询域信息
+
+![image-20230815193712861](配置win2012域服务器/image-20230815193712861.png)
+
+
+
+如果你要在Windows Server2016主机安装`SMB 1.0/CIFS 文件共享支持`功能, 这是无法实现的, 这是因为在Windows Server 2016中，出于安全原因，Microsoft不再默认安装SMB 1.0。
+
+不过你可以尝试使用Powershell来安装此功能，执行如下命令：
+
+```
+Install-WindowsFeature FS-SMB1
+```
+
+![image-20230815195517750](配置win2012域服务器/image-20230815195517750.png)
+
+
+
+
+
+​		
+
+​	
+
 ​	
 
 
